Part 2 booking form

--- a/index.html
+++ b/index.html
@@ -280,12 +280,11 @@
                             <label for="name" class="form__label">Full Name</label>
                         </div>
                         <div class="from__group">
-                            <input type="text" class="form__input" placeholder="Full Name" id="email" required>
+                            <input type="text" class="form__input" placeholder="Email Adress" id="email" required>
                             <label for="email" class="form__label">Email Address</label>
                         </div>
-
-
                     </form>
+
                 </div>
             </div>
         </div>
