--- a/index.html
+++ b/index.html
@@ -283,6 +283,22 @@
                             <input type="text" class="form__input" placeholder="Email Adress" id="email" required>
                             <label for="email" class="form__label">Email Address</label>
                         </div>
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="small" name="size">
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Small tour group
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="large"  name="size">
+                                <label for="small" class="form__radio-label">
+                                    large tour group
+                                    <span class="form__radio-button"></span>
+                                </label>
+                            </div>
+                        </div>
                     </form>
 
                 </div>
