--- a/index.html
+++ b/index.html
@@ -309,6 +309,27 @@
         </div>
     </section>
 </main>
+<footer class="footer">
+    <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+    </div>
+    <div class="row">
+        <div class="col-1-of-2">
+            <ul class="footer__list footer__navigation">
+                <li class="footer__item"><a href="#" class="footer_link">Company</a></li>
+                <li class="footer__item"><a href="#" class="footer_link">Contact us</a></li>
+                <li class="footer__item"><a href="#" class="footer_link">Carrears</a></li>
+                <li class="footer__item"><a href="#" class="footer_link">Private policy</a></li>
+                <li class="footer__item"><a href="#" class="footer_link">Terms</a></li>
+            </ul>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright">
+                Built my <a href="#" class="footer_link">tnazorr Copyright &copy; not for commerce use</a>
+            </p>
+        </div>
+    </div>
+</footer>
 
 <section class="grid-test">
     <div class="row">
