--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="css/icon-font.css">
 </head>
 <body>
+<div class="navigation">
+    <input type="checkbox" class="navigation_checkbox" id="navi-toggle">
+    <label for="navi-toggle" class="navigation__button"> MENU</label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__nav">
+        <ul class="navigation__list">
+            <li class="navigation__item"><a href="#" class="navigation__link"><sapan>01</sapan>About Nature</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><sapan>02</sapan>Your benifits</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><sapan>03</sapan>Popular tours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><sapan>04</sapan>Stories</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><sapan>05</sapan>Book now</a></li>
+        </ul>
+    </nav>
+</div>
 <header class="header">
     <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="Logo" class="header__logo">
