--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 <div class="navigation">
-    <input type="checkbox" class="navigation_checkbox" id="navi-toggle">
-    <label for="navi-toggle" class="navigation__button"> MENU</label>
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+    <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+    </label>
     <div class="navigation__background">&nbsp;</div>
     <nav class="navigation__nav">
         <ul class="navigation__list">
@@ -344,7 +346,22 @@
         </div>
     </div>
 </footer>
-
+<div class="popup">
+    <div class="popup__content">
+        <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+            <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+            <p class="popup__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam mauris velit, sollicitudin a mauris vel, lacinia commodo elit. Maecenas congue leo nec scelerisque mattis. Aliquam feugiat ornare ultrices. Phasellus quis massa non ipsum porta suscipit. Nullam eu dui in felis feugiat rhoncus et sed felis. Fusce convallis, elit et maximus aliquam, elit magna vestibulum erat, eget lacinia ex sapien a nisi. Nam ac est et dolor tristique bibendum. Ut viverra, ante ac mollis commodo, mauris lectus lacinia lorem, at volutpat elit massa tristique erat. Nam ultricies metus nec enim accumsan ultrices. Fusce ipsum arcu, sagittis id ornare a, auctor dictum nibh. Nullam sed commodo tellus. Suspendisse magna arcu, consectetur ut nisl id, commodo tincidunt neque. Aliquam malesuada, nibh vel commodo semper, justo nulla commodo magna, vel volutpat tellus leo at tortor. Praesent vitae arcu vel sapien ultricies malesuada. Praesent in diam maximus, lobortis diam vitae, egestas felis.
+            </p>
+            <a href="#" class="btn btn--green">Book now</a>
+        </div>
+    </div>
+</div>
 <section class="grid-test">
     <div class="row">
         <div class="col-1-of-2">
